--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,3 +1,3 @@
 <% @coupons.each do |coupon| %>
-  <h2><%= coupon.store %><%= coupon.coupon_code %></h2>
+  <h2>Coupon Store: <%= link_to coupon.store, coupons_path(coupon) %><br>Coupon Code: <%= coupon.coupon_code %></h2>
 <% end %>  
